# MusicVisVibeCode

./: .gitignore  CLAUDE.md  CMakeLists.txt  Readme.md
.claude/: settings.local.json
Manifest/: Manifest.md  Readme.md
Manifest/Visualizations/Circle/: Manifest.md  Readme.md
Manifest/Visualizations/CyberValley/: Manifest.md
Manifest/Visualizations/CyberValley2/: Manifest.md  Readme.md
Manifest/Visualizations/LineFader/: Manifest.md  Readme.md
Manifest/Visualizations/LineRacer/: Readme.md
Manifest/Visualizations/OutRun/: Readme.md
Manifest/Visualizations/Spectrum/: Manifest.md  Readme.md
Manifest/Visualizations/Spectrum2/: Manifest.md  Readme.md
src/: Config.cpp  Config.h  main.cpp
src/audio/: AudioEngine.cpp  AudioEngine.h
src/rendering/: Renderer.cpp  Renderer.h
src/visualizations/: BaseVisualization.h  CircleVis.cpp  CircleVis.h  CyberValley2Vis.cpp  CyberValley2Vis.h  LineFaderVis.cpp  LineFaderVis.h  Spectrum2Vis.cpp  Spectrum2Vis.h  SpectrumVis.cpp  SpectrumVis.h
tests/: ScalingTest.cpp
